read button functioning correctly form validation working, but not showing missing info fields

--- a/style.css
+++ b/style.css
@@ -181,7 +181,6 @@ input {
   width: 95%;
   max-width: 1100px;
   margin-top: 3rem;
-  /* background-color: red; */
 }
 
 .card {
@@ -196,6 +195,10 @@ input {
   padding: 2rem;
   gap: 1rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.card p:first-of-type {
+  font-weight: var(--fw-bold);
 }
 
 .card-button {
